--- a/index.html
+++ b/index.html
@@ -231,16 +231,37 @@
     </main>
 
     <footer>
-      <!--Logo-->
-      <div class="footer-logo">
-        <a href="" class="logo-a"><span class="logo">WEB</span>STUDIO</a>
-      </div>
-      <!--Logo Bitimi-->
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
-      <div class="footer-social">
-        <p class="footer-social-text">Social media</p>
-      </div>
+      <ul class="footer-list">
+        <li>
+          <!--Logo-->
+          <div class="footer-logo">
+            <a href="" class="logo-a"><span class="logo">WEB</span>STUDIO</a>
+          </div>
+          <!--Logo Bitimi-->
+          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth
+            solutions.</p>
+        </li>
+        <li>
+          <div class="footer-social">
+            <p class="footer-social-text">Social media</p>
+            <div class="footer-sosyal_medya">
+              <svg class="icon icon-instagram">
+                <use xlink:href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+              <svg class="icon icon-twitter">
+                <use xlink:href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+              <svg class="icon icon-facebook">
+                <use xlink:href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+              <svg class="icon icon-linkedin">
+                <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
+          </div>
+        </li>
+      </ul>
     </footer>
   </div>
 </body>
