--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div>
         <nav>
           <ul class="page-nav">
-            <li><a class="link" href="#">Studio</a></li>
-            <li><a class="link" href="#">Portfolio</a></li>
-            <li><a class="link" href="#">Contact</a></li>
+            <li><a class="link active" href="#">Studio</a></li>
+            <li><a class="link active" href="#">Portfolio</a></li>
+            <li><a class="link active" href="#">Contact</a></li>
           </ul>
         </nav>
       </div>
