upgrade css,upgrade index

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <nav>
           <ul class="page-nav">
             <li><a class="link active" href="#">Studio</a></li>
-            <li><a class="link active" href="#">Portfolio</a></li>
-            <li><a class="link active" href="#">Contact</a></li>
+            <li><a class="link" href="#">Portfolio</a></li>
+            <li><a class="link" href="#">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -192,10 +192,15 @@
             </div>
           </li>
           <li>
-            <div>
+            <div class="card2">
               <img src="./images/cashlesspayment.jpg" width="360" alt="Cashless Payment" />
               <h3>Cashless Payment</h3>
               <p>Marketing</p>
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
             </div>
           </li>
           <li>
