--- a/index.html
+++ b/index.html
@@ -194,13 +194,16 @@
           <li>
             <div class="card2">
               <img src="./images/cashlesspayment.jpg" width="360" alt="Cashless Payment" />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+
               <div class="overlay">
                 <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App ·
                   Cloud Storage App</p>
               </div>
+            </div>
+            <div>
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
             </div>
           </li>
           <li>
