upgrade index,upgrade css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <!--Menu Bitimi-->
       <!--Contact Info-->
-      <div>
+      <div class="iletisim">
         <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
       </div>
